crates/pampa/snapshots/error-corpus/text/007.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m [Q-2-5] Unclosed Emphasis
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mresources/error-corpus/007.qmd:1:11[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m_[0m[38;5;249md[0m[38;5;249mo[0m[38;5;249mc[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mt[0m[31m][0m[38;5;249m([0m[38;5;249ma[0m[38;5;249m)[0m
 [38;5;240m  │[0m           [31m┬[0m  
 [38;5;240m  │[0m           [31m╰[0m[31m─[0m[31m─[0m I reached the end of the block before finding a closing '_' for the emphasis.
[38;5;246m───╯[0m
