crates/pampa/snapshots/error-corpus/text/009.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m [Q-2-7] Unclosed Single Quote
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mresources/error-corpus/009.qmd:1:7[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m`[0m[38;5;249ma[0m[38;5;249m`[0m[36m'[0m[38;5;249ms[0m[31m][0m[38;5;249m([0m[38;5;249mb[0m[38;5;249m)[0m
 [38;5;240m  │[0m     [36m┬[0m [31m┬[0m  
 [38;5;240m  │[0m     [36m╰[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m This is the opening quote. If you need an apostrophe, escape it with a backslash.
 [38;5;240m  │[0m       [31m│[0m  
 [38;5;240m  │[0m       [31m╰[0m[31m─[0m[31m─[0m I reached the end of the block before finding a closing "'" for the quote.
[38;5;246m───╯[0m
